--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   webapp:
+    container_name: webapp
     build:
       context: .
       dockerfile: Dockerfile
@@ -13,6 +14,7 @@ services:
       - CONNECTION_STRING=Server=database;Database=userdatabase;User=sa;Password=Your_password123!;MultipleActiveResultSets=true
 
   database:
+    container_name: database
     image: mcr.microsoft.com/mssql/server:2019-latest
     ports:
       - "1433:1433"
