--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - database
     environment:
-      - CONNECTION_STRING=Server=database;Database=userdatabase;User=sa;Password=Your_password123!;MultipleActiveResultSets=true
+      - CONNECTION_STRING=Server=database;Database=userdatabase;User=sa;Password=Your_password123!;MultipleActiveResultSets=true;Encrypt=false;TrustServerCertificate=True
 
   database:
     container_name: database
